--- a/week6/mini_project/requirements.txt
+++ b/week6/mini_project/requirements.txt
@@ -4,7 +4,7 @@ argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asttokens==3.0.0
 async-lru==2.0.4
-attrs==24.3.0
+attrs==18.2.0
 babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.2.0
@@ -61,6 +61,7 @@ packaging==24.2
 pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
+pdflatex==0.1.3
 pexpect==4.9.0
 pillow==11.1.0
 platformdirs==4.3.6
